--- a/src/app/components/events/event-form/event-form.component.html
+++ b/src/app/components/events/event-form/event-form.component.html
@@ -257,7 +257,7 @@
           
           <!-- Link do WhatsApp -->
           <div class="form-group span-2">
-            <label for="whatsappLink">Link para Grupo do WhatsApp *</label>
+            <label for="whatsappLink">Link para Grupo do WhatsApp (Opcional)</label>
             <input 
               id="whatsappLink" 
               formControlName="whatsappLink" 
