--- a/src/app/components/home/home-page/home-page.component.html
+++ b/src/app/components/home/home-page/home-page.component.html
@@ -72,7 +72,7 @@
               <div class="home-page__event-image">
                 <img [src]="event.imageUrl || 'assets/default-event.jpg'" [alt]="event.eventName"
                   class="home-page__event-img" />
-                <div class="home-page__event-date">
+                <div class="home-page__event-date" *ngIf="!event.isRecurring">
                   <span class="home-page__event-day">{{
                     getEventDay(event.eventDate)
                     }}</span>
@@ -82,6 +82,11 @@
                   <span class="home-page__event-year">{{
                     getEventYear(event.eventDate)
                     }}</span>
+                </div>
+                <div class="home-page__event-recurrence" *ngIf="event.isRecurring">
+                  <span class="home-page__recurrence-text">
+                    {{ event.recurrenceType === 'weekly' ? 'Toda semana' : 'Todo mês' }}
+                  </span>
                 </div>
               </div>
 
@@ -120,7 +125,7 @@
           <div class="home-page__event-image">
             <img [src]="event.imageUrl || 'assets/default-event.jpg'" [alt]="event.eventName"
               class="home-page__event-img" />
-            <div class="home-page__event-date">
+            <div class="home-page__event-date" *ngIf="!event.isRecurring">
               <span class="home-page__event-day">{{
                 getEventDay(event.eventDate)
                 }}</span>
@@ -130,6 +135,11 @@
               <span class="home-page__event-year">{{
                 getEventYear(event.eventDate)
                 }}</span>
+            </div>
+            <div class="home-page__event-recurrence" *ngIf="event.isRecurring">
+              <span class="home-page__recurrence-text">
+                {{ event.recurrenceType === 'weekly' ? 'Toda semana' : 'Todo mês' }}
+              </span>
             </div>
           </div>
 
