--- a/src/app/components/auth/auth-page/auth-page.component.html
+++ b/src/app/components/auth/auth-page/auth-page.component.html
@@ -36,7 +36,7 @@
          <div class="auth-page__form-content">
             <div class="auth-page__welcome">
                <h1 class="auth-page__welcome-title">
-                  {{ isLoginMode ? 'Bem-vindo ao Bomfest' : 'Create Account' }}
+                  {{ isLoginMode ? 'Bem-vindo ao Bomfest' : 'Crie sua Conta' }}
                </h1>
                <p class="auth-page__welcome-subtitle">
                   {{ isLoginMode ? 'Hoje é aonde?' : 'Junte-se à comunidade Bomfest' }}
