--- a/src/app/components/auth/login-form/login-form.component.html
+++ b/src/app/components/auth/login-form/login-form.component.html
@@ -18,7 +18,7 @@
         formControlName="password" 
         class="login-form__input login-form__input--password"
         [class.login-form__input--error]="getFieldError('password')"
-        placeholder="Password">
+        placeholder="Senha">
       <button 
         type="button" 
         class="login-form__password-toggle"
