--- a/src/app/components/events/event-details/event-details.component.html
+++ b/src/app/components/events/event-details/event-details.component.html
@@ -2,7 +2,7 @@
 <div class="event-details-page" *ngIf="!isLoading && event">
 
    <!-- Header with Background Image -->
-   <div class="event-header" [style.background-image]="event.imageUrl ? 'url(' + event.imageUrl + ')' : 'none'">
+   <div class="event-header" [style.background-image]="event.imageUrl ? 'url(' + event.imageUrl + ')' : 'url(https://img.freepik.com/vetores-premium/icone-emoji-festa-confete-na-rede-social-do-clube-icone-de-vetor-de-biscoito-de-feliz-aniversario_256722-319.jpg)'">
       <div class="event-header__overlay"></div>
       <div class="event-header__content">
 
