--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -3,7 +3,7 @@
   <nav class="home-page__nav">
     <div class="home-page__nav-container">
       <div class="home-page__brand">
-        <h1 class="home-page__brand-title">Boomfest</h1>
+        <h1 class="home-page__brand-title"><img src="./boomba-favicon.png" alt=""> Boomfest</h1>
       </div>
 
       <ul class="home-page__nav-menu">
