--- a/src/app/components/picos/picos-list/picos-list.component.scss
+++ b/src/app/components/picos/picos-list/picos-list.component.scss
@@ -3,7 +3,7 @@ body, html {
 }
 
 .picos-list-container {
-  padding: 100px 20px 20px 20px;
+  padding: 100px 1rem 1rem 1rem;
   max-width: 1200px;
   margin: 0 auto;
   background: var(--gray-900);
@@ -163,6 +163,9 @@ body, html {
       background: var(--primary-color);
       color: white;
       border-color: var(--primary-light);
+      @media (max-width: 768px) {
+        width: 100%;
+      }
     }
     
     &:hover:not(.active) {
@@ -410,6 +413,7 @@ body, html {
   .filters {
     flex-direction: column;
     align-items: stretch;
+    padding: 15px 10px;
   }
   
   .search-box {
